--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>recommender</module>
+        <module>WebServer</module>
     </modules>
     <properties>
         <!-- 控制日志信息输送 -->
